@@ -3,12 +3,13 @@ package ADAMK::Distribution;
 use 5.008;
 use strict;
 use warnings;
-use File::Spec                  ();
-use File::Temp                  ();
-use File::pushd                 ();
-use CPAN::Version               ();
-use ADAMK::Repository::Util     ('shell');
-use ADAMK::Distribution::Export ();
+use File::Spec                    ();
+use File::Temp                    ();
+use File::pushd                   ();
+use CPAN::Version                 ();
+use ADAMK::Repository::Util       ('shell');
+use ADAMK::Distribution::Export   ();
+use ADAMK::Distribution::Checkout ();
 
 use vars qw{$VERSION};
 BEGIN {
@@ -63,12 +64,26 @@ sub svn_url {
 	$_[0]->svn_info->{URL};
 }
 
+sub checkout {
+	my $self = shift;
+	my $path = File::Temp::tempdir(@_);
+	my $url  = $self->svn_url;
+	$self->repository->svn_checkout( $url, $path );
+
+	# Create and return an ADAMK::Distribution::Checkout object
+	return ADAMK::Distribution::Checkout->new(
+		name         => $self->name,
+		path         => $path,
+		distribution => $self,
+	);
+}
+
 sub export {
 	my $self     = shift;
 	my $revision = shift;
 	my $path     = File::Temp::tempdir(@_);
 	my $url      = $self->svn_url;
-	$self->repository->svn_export( $url, $revision, $path );
+	$self->repository->svn_export( $url, $path, $revision );
 
 	# Create and return an ADAMK::Distribution::Export object
 	return ADAMK::Distribution::Export->new(
